--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
-#hi, this is shaun putting a commit, I will now push the commit changes button
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CSCB20 - Introduction to Databases and Web Applications</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <div class="navigation">
+      <a href="#" class="navmenu">Navigation</a>
+        <div class="dropdown">
+          <div class="nav-content">
+            <a href="index.html">Home</a>
+            <a href="syllabus.html">Syllabus</a>
+            <a href="assignments.html">Assignments</a>
+            <a href="labs.html">Labs</a>
+            <a href="lecturenotes.html">Lecture Notes</a>
+            <a href="piazza.html">Piazza</a>
+            <a href="markus.html">Markus</a>
+            <a href="anonfeedback.html">Anon Feedback</a>
+            <a href="courseteam.html">Course Team</a>
+          </div>
+        </div>
+    </div>
+    <h1 class="header">CSCB20 - Introduction to Databases and Web Applications</h1>
+        <div class="grid-home">
+            <h2 class="welcome">Welcome</h2>
+            <h3 class="homeheader">Course Description</h3>
+            <p class="hometext">A practical introduction to databases and Web app development. Databases: terminology and applications; creating, querying and updating databases; the entity-relationship model for database design. Web documents and applications: static and interactive documents; Web servers and dynamic server-generated content; Web application development and interface with databases.</p>
+            <p class="hometext">Prerequisite Some experience with programming in an imperative language such as Python, Java or C.</p>
+            <p class="hometext">Exclusion This course may not be taken after - or concurrently with - any C- or D-level CSC course.</p>
+            <a href="file:///C:/Users/josep/OneDrive/Desktop/A2/syllabus.pdf" target="_blank">Syllabus</a>
+            <h3 class="homeheader">Instructors</h3>
+            <p class="hometext">
+              Dr. Anna Bretscher</p>
+            <div>
+              <p class="info1"> </p>
+            </div>
+        </div>
+  </body>
+</html>
