--- a/index.html
+++ b/index.html
@@ -35,8 +35,17 @@
             <h3 class="homeheader">Instructors</h3>
             <p class="hometext">
               Dr. Anna Bretscher</p>
-            <div>
-              <p class="info1"> </p>
+            <div class="info">
+              <p class="info1"> Email: </p>
+              <p class="info1"> Office: </p>
+              <p class="info1"> Phone: </p>
+              <p class="info1"> Lectures: </p>
+              <p class="info1"> Office Hours: </p>
+              <p class="info2"> bretscher@utsc.utoronto.ca </p>
+              <p class="info2"> IC493 </p>
+              <p class="info2"> (416) 208-4745 </p>
+              <p class="info2"> Mondays 9:15-11:00 in HW 216 </p>
+              <p class="info2"> W 11:00-12:00 </p>
             </div>
         </div>
   </body>
