--- a/syllabus.html
+++ b/syllabus.html
@@ -27,7 +27,7 @@
     <div class="container">
     <h1 class="header">Syllabus</h1>
     <div class="grid-home">
-        <div class="intro">
+        <div class="syllabus">
             <h3 class="homeheader">CSCB20 Course Syllabus</h3>
             <p class="hometext">Here is the Syllabus attached as a PDF. Please read the entire Syllabus.</p>
             <a class="homelink" href="file:///C:/Users/josep/OneDrive/Desktop/A2/syllabus.pdf" target="_blank">Syllabus</a>
