--- a/piazza.html
+++ b/piazza.html
@@ -8,22 +8,33 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="navigation">
-      <a href="#" class="navmenu">Navigation</a>
-        <div class="dropdown">
-          <div class="nav-content">
-            <a href="index.html">Home</a>
-            <a href="syllabus.html">Syllabus</a>
-            <a href="assignments.html">Assignments</a>
-            <a href="labs.html">Labs</a>
-            <a href="lecturenotes.html">Lecture Notes</a>
-            <a href="piazza.html">Piazza</a>
-            <a href="markus.html">Markus</a>
-            <a href="anonfeedback.html">Anon Feedback</a>
-            <a href="courseteam.html">Course Team</a>
-          </div>
+      <div class="navigation">
+          <a href="#" class="navmenu">Navigation</a>
+              <div class="dropdown">
+                  <div class="nav-content">
+                      <a href="index.html">Home</a>
+                      <a href="syllabus.html">Syllabus</a>
+                      <a href="assignments.html">Assignments</a>
+                      <a href="labs.html">Labs</a>
+                      <a href="lecturenotes.html">Lecture Notes</a>
+                      <a href="piazza.html">Piazza</a>
+                      <a href="markus.html">Markus</a>
+                      <a href="anonfeedback.html">Anon Feedback</a>
+                      <a href="courseteam.html">Course Team</a>
+                  </div>
+              </div>
+      </div>
+    <div class="container">
+    <h1 class="header">Piazza</h1>
+    <div class="grid-home">
+        <div class="syllabus">
+            <embed class="piazza" src="https://piazza.com/class/m5fmz9kzjo83yk">
         </div>
     </div>
-    <h1 class="header">Piazza</h1>
+    <div class="footer"> 
+        <a class="footerlink" href="https://www.utsc.utoronto.ca/cms/computer-science">Faculty of Computer Science</a>
+        <footer>This website is created in a collbarative effort by Joseph Chang, Haochen Li, and Shaun Danny.</footer> 
+    </div>   
+</div>
   </body>
 </html>
