--- a/assignments.html
+++ b/assignments.html
@@ -24,6 +24,8 @@
           </div>
         </div>
     </div>
+    <div class="margin">
     <h1 class="header">Assignments</h1>
+</div>
   </body>
 </html>
