--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                   </div>
               </div>
       </div>
-    <div class="home">
+    <div class="margin">
         <h1 class="header">CSCB20 - Introduction to Databases and Web Applications</h1>
             <div class="grid-home">
                 <h2 class="welcome">Welcome!</h2>
