--- a/markus.html
+++ b/markus.html
@@ -24,8 +24,9 @@
                   </div>
               </div>
       </div>
-    <div class="container">
+    <div class="margin">
     <h1 class="header">Markus</h1>
+    <div class="container">
     <div class="grid-home">
         <div class="container2">
             <h3 class="homeheader">CSCB20 Markus</h3>
@@ -37,6 +38,7 @@
         <a class="footerlink" href="https://www.utsc.utoronto.ca/cms/computer-science">Faculty of Computer Science</a>
         <footer>This website is created in a collbarative effort by Joseph Chang, Haochen Li, and Shaun Danny.</footer> 
     </div>   
+</div>
 </div>
   </body>
 </html>
