--- a/piazza.html
+++ b/piazza.html
@@ -24,10 +24,11 @@
                   </div>
               </div>
       </div>
+    <div class="margin">
     <div class="container">
     <h1 class="header">Piazza</h1>
     <div class="grid-home">
-        <div class="syllabus">
+        <div class="container2">
             <embed class="piazza" src="https://piazza.com/class/m5fmz9kzjo83yk">
         </div>
     </div>
@@ -35,6 +36,7 @@
         <a class="footerlink" href="https://www.utsc.utoronto.ca/cms/computer-science">Faculty of Computer Science</a>
         <footer>This website is created in a collbarative effort by Joseph Chang, Haochen Li, and Shaun Danny.</footer> 
     </div>   
+</div>
 </div>
   </body>
 </html>
