--- a/src/lecturenotes.html
+++ b/src/lecturenotes.html
@@ -6,24 +6,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSCB20 - Introduction to Databases and Web Applications</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet" />
   </head>
   <body>
-    <div class="navigation">
-      <a href="#" class="navmenu">Navigation</a>
-        <div class="dropdown">
-          <div class="nav-content">
-            <a href="index.html">Home</a>
-            <a href="syllabus.html">Syllabus</a>
-            <a href="assignments.html">Assignments</a>
-            <a href="labs.html">Labs</a>
-            <a href="lecturenotes.html">Lecture Notes</a>
-            <a href="piazza.html">Piazza</a>
-            <a href="markus.html">Markus</a>
-            <a href="anonfeedback.html">Anon Feedback</a>
-            <a href="courseteam.html">Course Team</a>
-          </div>
+      <div class="navigation">
+          <a href="#" class="navmenu">Navigation</a>
+              <div class="dropdown">
+                  <div class="nav-content">
+                      <a href="index.html">Home</a>
+                      <a href="syllabus.html">Syllabus</a>
+                      <a href="assignments.html">Assignments</a>
+                      <a href="labs.html">Labs</a>
+                      <a href="lecturenotes.html">Lecture Notes</a>
+                      <a href="piazza.html">Piazza</a>
+                      <a href="markus.html">Markus</a>
+                      <a href="anonfeedback.html">Anon Feedback</a>
+                      <a href="courseteam.html">Course Team</a>
+                  </div>
+              </div>
+      </div>
+    <div class="margin">
+    <h1 class="header">Lecture Notes</h1>
+    <div class="container">
+    <div class="grid-home">
+        <div class="container2">
+            <h3 class="homeheader">CSCB20 Course Lecture Notes</h3>
+            <p class="hometext">Here are the Lecture Notes attached as a PDF. Please read before coming to class.</p>
+            <a class="homelink" href="file:///C:/Users/josep/OneDrive/Desktop/A2/Lecture%20Notes.pdf" target="_blank">Lecture Notes</a>
         </div>
     </div>
-    <h1 class="header">Lecture Notes</h1>
+    <div class="footer"> 
+        <a class="footerlink" href="https://www.utsc.utoronto.ca/cms/computer-science">Faculty of Computer Science</a>
+        <footer>This website is created in a collbarative effort by Joseph Chang, Haochen Li, and Shaun Danny.</footer> 
+    </div>   
+</div>
+</div>
   </body>
 </html>
