--- a/src/assignments.html
+++ b/src/assignments.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSCB20 - Introduction to Databases and Web Applications</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet" />
   </head>
   <body>
     <div class="navigation">
@@ -26,6 +27,46 @@
     </div>
     <div class="margin">
     <h1 class="header">Assignments</h1>
-</div>
+    <div class="container3">
+        <div class="grid-home">
+            <div class="container2">
+                <h3 class="homeheader">Overview</h3>
+                <p class="hometext">Here are the assignment and exercise topics, weights, and due dates. I will be posting the exercise and assignment handouts here. All exercises and assignments will be submitted on <a href="https://markus2.utsc.utoronto.ca/" target="_blank">Markus</a>.</p>
+                <h3 class="homeheader">Assignments</h3>
+            </div>
+        </div>
+    </div>
+    <div class="grid-assignment">
+        <p class="labitem"></p>
+        <p class="labitem">Exercise</p>
+            <p class="labitem">Topic (tentative)</p>
+            <p class="labitem">Weight</p>
+            <p class="labitem">Due Date</p>
+            <p class="labitem">Solution</p>
+            <p class="labitem">1</p>
+            <a class="lablink" href="file:///C:/Users/josep/OneDrive/Desktop/A2/Lecture%20Notes.pdf" target="_blank">Handout</a>
+            <p class="labitem">Relational Algebra and MySQL</p>
+            <p class="labitem">15%</p>
+            <p class="labitem">Part 1. Wednesday Feb. 1, 11.59pm, Submit to <a href="https://markus2.utsc.utoronto.ca/" target="_blank">Markus</a>. UPDATED Part 2 and 3. For 5% bonus Saturday Feb. 11, 11.59pm or Friday Feb. 17, 11.59 Submit to <a href="https://markus2.utsc.utoronto.ca/" target="_blank">Markus</a> You can download a dumpfile for IMDB_SMALL <a href="C:\Users\josep\OneDrive\Desktop\A2\IMDB_SMALL.sql" target="_blank">here</a></p>
+            <a class="lablink" href="file:///C:/Users/josep/OneDrive/Desktop/A2/Lecture%20Notes.pdf" target="_blank">Solution Part 1</a>
+            <p class="labitem">2</p>
+            <a class="lablink" href="file:///C:/Users/josep/OneDrive/Desktop/A2/Lecture%20Notes.pdf" target="_blank">Handout a2</a>
+            <p class="labitem">HTML, CSS, PHP</p>
+            <p class="labitem">15%</p>
+            <a class="lablink" href="file:///C:/Users/josep/OneDrive/Desktop/A2/Lecture%20Notes.pdf" target="_blank">Handout</a>
+            <a class="lablink" href="file:///C:/Users/josep/OneDrive/Desktop/A2/Lecture%20Notes.pdf" target="_blank">Solns</a>
+            <p class="labitem">7</p>
+            <a class="lablink" href="file:///C:/Users/josep/OneDrive/Desktop/A2/Lecture%20Notes.pdf" target="_blank">Handout</a>
+            <p class="labitem"></p>
+            <p class="labitem">8</p>
+            <a class="lablink" href="file:///C:/Users/josep/OneDrive/Desktop/A2/Lecture%20Notes.pdf" target="_blank">Handout</a>
+            <p class="labitem"></p>
+            <p class="labitem">9</p>
+            <a class="lablink" href="file:///C:/Users/josep/OneDrive/Desktop/A2/Lecture%20Notes.pdf" target="_blank">Handout</a>
+            <p class="labitem"></p>
+            <p class="labitem">10</p>
+            <a class="lablink" href="https://www.w3schools.com/jquery/jquery_syntax.asp" target="_blank">W3 Tutorial</a>
+            <p class="labitem">Work through the tutorial for jQuery up until jQuery Remove.</p> 
+    </div>
   </body>
 </html>
