--- a/src/courseteam.html
+++ b/src/courseteam.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSCB20 - Introduction to Databases and Web Applications</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet" />
   </head>
   <body>
     <div class="navigation">
@@ -24,6 +25,8 @@
           </div>
         </div>
     </div>
+    <div class="margin">
     <h1 class="header">Course Team</h1>
+    </div>
   </body>
 </html>
