--- a/src/piazza.html
+++ b/src/piazza.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSCB20 - Introduction to Databases and Web Applications</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet" />
   </head>
   <body>
       <div class="navigation">
@@ -25,12 +26,9 @@
               </div>
       </div>
     <div class="margin">
-    <div class="container">
     <h1 class="header">Piazza</h1>
     <div class="grid-home">
-        <div class="container2">
-            <embed class="piazza" src="https://piazza.com/class/m5fmz9kzjo83yk">
-        </div>
+        <embed class="piazza" src="https://piazza.com/class/m5fmz9kzjo83yk">
     </div>
     <div class="footer"> 
         <a class="footerlink" href="https://www.utsc.utoronto.ca/cms/computer-science">Faculty of Computer Science</a>
