--- a/src/lecturenotes.html
+++ b/src/lecturenotes.html
@@ -22,6 +22,10 @@
                       <a href="markus.html">Markus</a>
                       <a href="anonfeedback.html">Anon Feedback</a>
                       <a href="courseteam.html">Course Team</a>
+                      <a href="news.html">News</a>
+                      <a href="tests.html">Tests</a>
+                      <a href="resources.html">Resources</a>
+                      <a href="calendar.html">Calendar</a>
                   </div>
               </div>
       </div>
