--- a/src/markus.html
+++ b/src/markus.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSCB20 - Introduction to Databases and Web Applications</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet" />
   </head>
   <body>
       <div class="navigation">
@@ -21,18 +22,21 @@
                       <a href="markus.html">Markus</a>
                       <a href="anonfeedback.html">Anon Feedback</a>
                       <a href="courseteam.html">Course Team</a>
+                      <a href="news.html">News</a>
+                      <a href="tests.html">Tests</a>
+                      <a href="resources.html">Resources</a>
+                      <a href="calendar.html">Calendar</a>
                   </div>
               </div>
       </div>
     <div class="margin">
     <h1 class="header">Markus</h1>
-    <div class="container">
     <div class="grid-home">
-        <div class="container2">
-            <h3 class="homeheader">CSCB20 Markus</h3>
-            <p class="hometext">Here is the link to Markus.</p>
-            <a class="homelink" href="https://markus2.utsc.utoronto.ca/" target="_blank">Markus</a>
-        </div>
+        <h3 class="homeheader">CSCB20 Markus</h3>
+        <p class="hometext">Here is the link to Markus.</p>
+        <a class="homelink" href="https://markus2.utsc.utoronto.ca/" target="_blank">Markus</a>
+    </div>
+
     </div>
     <div class="footer"> 
         <a class="footerlink" href="https://www.utsc.utoronto.ca/cms/computer-science">Faculty of Computer Science</a>
