--- a/src/resources.html
+++ b/src/resources.html
@@ -30,7 +30,7 @@
         </div>
     </div>
     <div class="margin">
-    <h1 class="header">Course Team</h1>
+    <h1 class="header">Resources</h1>
     </div>
   </body>
 </html>
