--- a/src/tests.html
+++ b/src/tests.html
@@ -30,7 +30,22 @@
         </div>
     </div>
     <div class="margin">
-    <h1 class="header">Tests</h1>
-    </div>
+        <h1 class="header">Tests</h1>
+        <div class="grid-home">
+            <div class="container2">
+                <h3 class="homeheader">Midterm</h3>
+                <p class="hometext">There will be one midterm. The midterm will be 75min in length. You should go to either HW215 or HW216 depending on your last name as shown here.</p>
+                <img class="image" src="https://www.utsc.utoronto.ca/~bretscher/b20/tests/B20_rooms.jpg" alt="tests">
+                <p class="hometext">Preparing for the midterm:</p>
+                <ul class="hometext">
+                    <li>Understand all parts of A1.</li>
+                    <li>The midterm will cover everything on databases that we did from the start until part way through the week 6 lecture.</li>
+                  </ul>
+            </div>
+        </div>
+        <div class="footer"> 
+            <a class="footerlink" href="https://www.utsc.utoronto.ca/cms/computer-science">Faculty of Computer Science</a>
+            <footer>This website is created in a collbarative effort by Joseph Chang, Haochen Li, and Shaun Danny.</footer> 
+        </div>   
   </body>
 </html>
