--- a/src/lecturenotes.html
+++ b/src/lecturenotes.html
@@ -30,8 +30,8 @@
               </div>
       </div>
     <div class="margin">
+    <div class="minheight">
     <h1 class="header">Lecture Notes</h1>
-    <div class="container">
     <div class="grid-home">
         <div class="container2">
             <h3 class="homeheader">CSCB20 Course Lecture Notes</h3>
@@ -39,6 +39,7 @@
             <a class="homelink" href="file:///C:/Users/josep/OneDrive/Desktop/A2/Lecture%20Notes.pdf" target="_blank">Lecture Notes</a>
         </div>
     </div>
+</div>
     <div class="footer"> 
         <a class="footerlink" href="https://www.utsc.utoronto.ca/cms/computer-science">Faculty of Computer Science</a>
         <footer>This website is created in a collbarative effort by Joseph Chang, Haochen Li, and Shaun Danny.</footer> 
