--- a/src/markus.html
+++ b/src/markus.html
@@ -30,18 +30,19 @@
               </div>
       </div>
     <div class="margin">
+    <div class="minheight">
     <h1 class="header">Markus</h1>
     <div class="grid-home">
         <h3 class="homeheader">CSCB20 Markus</h3>
         <p class="hometext">Here is the link to Markus.</p>
         <a class="homelink" href="https://markus2.utsc.utoronto.ca/" target="_blank">Markus</a>
     </div>
-
     </div>
     <div class="footer"> 
         <a class="footerlink" href="https://www.utsc.utoronto.ca/cms/computer-science">Faculty of Computer Science</a>
         <footer>This website is created in a collbarative effort by Joseph Chang, Haochen Li, and Shaun Danny.</footer> 
     </div>   
+</div>
 </div>
 </div>
   </body>
