--- a/src/calendar.html
+++ b/src/calendar.html
@@ -31,6 +31,7 @@
     </div>
     <div class="margin">
     <h1 class="header">Calendar</h1>
+    <img class="image" src="C:\Users\josep\OneDrive\Desktop\A2\image.jpg" alt="calendar">
     </div>
   </body>
 </html>
