--- a/src/syllabus.html
+++ b/src/syllabus.html
@@ -30,20 +30,18 @@
               </div>
       </div>
     <div class="margin">
+    <div class="minheight">
     <h1 class="header">Syllabus</h1>
-    <div class="container">
     <div class="grid-home">
-        <div class="container2">
             <h3 class="homeheader">CSCB20 Course Syllabus</h3>
             <p class="hometext">Here is the Syllabus attached as a PDF. Please read the entire Syllabus.</p>
             <a class="homelink" href="file:///C:/Users/josep/OneDrive/Desktop/A2/syllabus.pdf" target="_blank">Syllabus</a>
-        </div>
+    </div>
     </div>
     <div class="footer"> 
         <a class="footerlink" href="https://www.utsc.utoronto.ca/cms/computer-science">Faculty of Computer Science</a>
         <footer>This website is created in a collbarative effort by Joseph Chang, Haochen Li, and Shaun Danny.</footer> 
     </div>   
-</div>
 </div>
   </body>
 </html>
