--- a/src/tests.html
+++ b/src/tests.html
@@ -41,6 +41,7 @@
                     <li>Understand all parts of A1.</li>
                     <li>The midterm will cover everything on databases that we did from the start until part way through the week 6 lecture.</li>
                   </ul>
+                  <p class="hometext">Once you have done some preparation, you can practice on a previous midterm:  <a href="file:///C:/Users/josep/OneDrive/Desktop/A2/Lecture%20Notes.pdf">Term Test</a></p>
             </div>
         </div>
         <div class="footer"> 
