--- a/src/syllabus.html
+++ b/src/syllabus.html
@@ -35,7 +35,7 @@
     <div class="grid-home">
             <h3 class="homeheader">CSCB20 Course Syllabus</h3>
             <p class="hometext">Here is the Syllabus attached as a PDF. Please read the entire Syllabus.</p>
-            <a class="homelink" href="file:///C:/Users/josep/OneDrive/Desktop/A2/syllabus.pdf" target="_blank">Syllabus</a>
+            <a class="homelink" href="https://drive.google.com/file/d/19zYnJo9t8FyCPw0QnEy0KkoZaZ_kFAmj9/view?usp=sharing" target="_blank">Syllabus</a>
     </div>
     </div>
     <div class="footer"> 
