--- a/src/assignments.html
+++ b/src/assignments.html
@@ -50,9 +50,9 @@
             <p class="labitem">Relational Algebra and MySQL</p>
             <p class="labitem">15%</p>
             <p class="labitem">Part 1. Wednesday Feb. 1, 11.59pm, Submit to <a href="https://markus2.utsc.utoronto.ca/" target="_blank">Markus</a>. UPDATED Part 2 and 3. For 5% bonus Saturday Feb. 11, 11.59pm or Friday Feb. 17, 11.59 Submit to <a href="https://markus2.utsc.utoronto.ca/" target="_blank">Markus</a> You can download a dumpfile for IMDB_SMALL <a href="C:\Users\josep\OneDrive\Desktop\A2\IMDB_SMALL.sql" target="_blank">here</a></p>
-            <a class="lablink" href="file:///C:/Users/josep/OneDrive/Desktop/A2/Lecture%20Notes.pdf" target="_blank">Solution Part 1</a>
+            <a class="lablink" href="Lecture%20Notes.pdf" target="_blank">Solution Part 1</a>
             <p class="labitem">2</p>
-            <a class="lablink" href="file:///C:/Users/josep/OneDrive/Desktop/A2/Lecture%20Notes.pdf" target="_blank">Handout a2</a>
+            <a class="lablink" href="Lecture%20Notes.pdf" target="_blank">Handout a2</a>
             <p class="labitem">HTML, CSS, PHP</p>
             <p class="labitem">15%</p>
             <p class="labitem">Part 1: Worth 50% Friday March. 10, 11.59pm, Submit to <a href="https://markus2.utsc.utoronto.ca/" target="_blank">Markus</a>. Part 2: Worth 50% Friday March. 19, 11.59pm, Submit to <a href="https://markus2.utsc.utoronto.ca/" target="_blank">Markus</a>.</p>
@@ -70,5 +70,9 @@
             <p class="hometext">A. Return the first name, last name.</p>
         </div>
     </div>
+    <div class="footer"> 
+        <a class="footerlink" href="https://www.utsc.utoronto.ca/cms/computer-science">Faculty of Computer Science</a>
+        <footer>This website is created in a collbarative effort by Joseph Chang, Haochen Li, and Shaun Danny.</footer> 
+    </div> 
   </body>
 </html>
