--- a/src/labs.html
+++ b/src/labs.html
@@ -51,25 +51,25 @@
             <a class="lablink" href="https://www.utsc.utoronto.ca/~bretscher/b20/tutorials/t1/" target="_blank">Python, Command line</a>
             <p class="labitem">None</p>
             <p class="labitem">3</p>
-            <a class="lablink" href="file:///C:/Users/josep/OneDrive/Desktop/A2/Lecture%20Notes.pdf" target="_blank">Handout</a>
+            <a class="lablink" href="Lecture%20Notes.pdf" target="_blank">Handout</a>
             <p class="labitem"></p>
             <p class="labitem">4</p>
             <a class="lablink" href="https://www.utsc.utoronto.ca/~bretscher/b20/tutorials/t3/index.html" target="_blank">Handout university.sql</a>
             <a class="lablink" href="https://www.utsc.utoronto.ca/~bretscher/b20/tutorials/t3/query_solns.html" target="_blank">query_solns</a>
             <p class="labitem">5</p>
-            <a class="lablink" href="file:///C:/Users/josep/OneDrive/Desktop/A2/Lecture%20Notes.pdf" target="_blank">Handout</a>
-            <a class="lablink" href="file:///C:/Users/josep/OneDrive/Desktop/A2/Lecture%20Notes.pdf" target="_blank">Solns</a>
+            <a class="lablink" href="Lecture%20Notes.pdf" target="_blank">Handout</a>
+            <a class="lablink" href="Lecture%20Notes.pdf" target="_blank">Solns</a>
             <p class="labitem">6</p>
-            <a class="lablink" href="file:///C:/Users/josep/OneDrive/Desktop/A2/Lecture%20Notes.pdf" target="_blank">Handout</a>
-            <a class="lablink" href="file:///C:/Users/josep/OneDrive/Desktop/A2/Lecture%20Notes.pdf" target="_blank">Solns</a>
+            <a class="lablink" href="Lecture%20Notes.pdf" target="_blank">Handout</a>
+            <a class="lablink" href="Lecture%20Notes.pdf" target="_blank">Solns</a>
             <p class="labitem">7</p>
-            <a class="lablink" href="file:///C:/Users/josep/OneDrive/Desktop/A2/Lecture%20Notes.pdf" target="_blank">Handout</a>
+            <a class="lablink" href="Lecture%20Notes.pdf" target="_blank">Handout</a>
             <p class="labitem"></p>
             <p class="labitem">8</p>
-            <a class="lablink" href="file:///C:/Users/josep/OneDrive/Desktop/A2/Lecture%20Notes.pdf" target="_blank">Handout</a>
+            <a class="lablink" href="Lecture%20Notes.pdf" target="_blank">Handout</a>
             <p class="labitem"></p>
             <p class="labitem">9</p>
-            <a class="lablink" href="file:///C:/Users/josep/OneDrive/Desktop/A2/Lecture%20Notes.pdf" target="_blank">Handout</a>
+            <a class="lablink" href="Lecture%20Notes.pdf" target="_blank">Handout</a>
             <p class="labitem"></p>
             <p class="labitem">10</p>
             <a class="lablink" href="https://www.w3schools.com/jquery/jquery_syntax.asp" target="_blank">W3 Tutorial</a>
