--- a/src/lecturenotes.html
+++ b/src/lecturenotes.html
@@ -36,7 +36,7 @@
         <div class="container2">
             <h3 class="homeheader">CSCB20 Course Lecture Notes</h3>
             <p class="hometext">Here are the Lecture Notes attached as a PDF. Please read before coming to class.</p>
-            <a class="homelink" href="file:///C:/Users/josep/OneDrive/Desktop/A2/Lecture%20Notes.pdf" target="_blank">Lecture Notes</a>
+            <a class="homelink" href="Lecture%20Notes.pdf" target="_blank">Lecture Notes</a>
         </div>
     </div>
 </div>
