--- a/src/piazza.html
+++ b/src/piazza.html
@@ -30,8 +30,8 @@
               </div>
       </div>
     <div class="margin">
+    <div class="minheight">
     <h1 class="header">Piazza</h1>
-    <div class="grid-home">
         <embed class="piazza" src="https://piazza.com/class/m5fmz9kzjo83yk">
     </div>
     <div class="footer"> 
