--- a/src/syllabus.html
+++ b/src/syllabus.html
@@ -33,9 +33,11 @@
     <div class="minheight">
     <h1 class="header">Syllabus</h1>
     <div class="grid-home">
+        <div class="intro">
             <h3 class="homeheader">CSCB20 Course Syllabus</h3>
             <p class="hometext">Here is the Syllabus attached as a PDF. Please read the entire Syllabus.</p>
-            <a class="homelink" href="https://drive.google.com/file/d/19zYnJo9t8FyCPw0QnEy0KkoZaZ_kFAmj9/view?usp=sharing" target="_blank">Syllabus</a>
+            <a class="homelink" href="syllabus.pdf" target="_blank">Syllabus</a>
+        </div>
     </div>
     </div>
     <div class="footer"> 
