--- a/src/syllabus.html
+++ b/src/syllabus.html
@@ -36,7 +36,7 @@
         <div class="intro">
             <h3 class="homeheader">CSCB20 Course Syllabus</h3>
             <p class="hometext">Here is the Syllabus attached as a PDF. Please read the entire Syllabus.</p>
-            <a class="homelink" href="syllabus.pdf" target="_blank">Syllabus</a>
+            <iframe src="syllabus.pdf" width="100%" height="600px"></iframe>
         </div>
     </div>
     </div>
