--- a/src/lecturenotes.html
+++ b/src/lecturenotes.html
@@ -36,8 +36,7 @@
         <div class="container2">
             <h3 class="homeheader">CSCB20 Course Lecture Notes</h3>
             <p class="hometext">Here are the Lecture Notes attached as a PDF. Please read before coming to class.</p>
-            <a class="homelink" href="https://drive.google.com/file/d/13hDS4I5WuGi9QhRqv5bl50XdFWY9rKJh/view?usp=sharing" target="_blank">Lecture Notes</a>
-        </div>
+            <iframe src="Lecture Notes.pdf" width="100%" height="800px"></iframe>
     </div>
 </div>
     <div class="footer"> 
