--- a/src/anonfeedback.html
+++ b/src/anonfeedback.html
@@ -30,7 +30,22 @@
         </div>
     </div>
     <div class="margin">
-    <h1 class="header">Anon Feedback</h1>
+        <div class="minheight">
+        <h1 class="header">Anon Feedback</h1>
+        <div class="grid-home">
+            <div class="intro">
+            <p class="hometext">You can post your feedback to this course anonymously here. Please feel free to share your thoughts on this course.</p>
+            <form method="post">
+            <textarea name="feedback" placeholder="Enter feedback here..." required></textarea><br>
+            <input class="button" type="submit" value="Submit">
+        </form>
+            </div>
+        </div>
+        </div>
+        <div class="footer"> 
+            <a class="footerlink" href="https://www.utsc.utoronto.ca/cms/computer-science">Faculty of Computer Science</a>
+            <footer>This website is created in a collbarative effort by Joseph Chang, Haochen Li, and Shaun Danny.</footer> 
+        </div>   
     </div>
   </body>
 </html>
