--- a/src/courseteam.html
+++ b/src/courseteam.html
@@ -30,7 +30,25 @@
         </div>
     </div>
     <div class="margin">
-    <h1 class="header">Course Team</h1>
+        <div class="minheight">
+        <h1 class="header">Course Team</h1>
+        <div class="grid-home">
+            <div class="intro">
+                <h3 class="homeheader">Instructors</h3>
+                <h4 class="homeheader2">Anna Bretscher (Associate Professor, Teaching Stream)</h4>
+                <p class="coursetext"><b>Email: </b><a href="mailto:anna.bretscher@utoronto.ca">anna.bretscher@utoronto.ca</a></p>
+                <p class="coursetext"> <b>Telephone number:</b> 416.208.4745</p>
+                <p class="coursetext"> <b>Fax number: </b>416.287.7409</p>
+                <p class="coursetext"> <b>Building: </b>IA 4102</p>
+                <p class="hometext"> <b>Education: </b>B.Sc.(Queen's), M.Sc.(Queen's), Ph.D.(Toronto)</p>
+                <p class="hometext">Dr. Bretscher joined the department in 2004 after completing a Ph.D in Graph Theory at the University of Toronto and Master's and Bachelor's degrees at Queen's University. After teaching a course as a graduate student, Anna came to the realization that teaching students theoretical concepts is where her passion lies. In particular, she loves the challenge of simplifying difficult concepts and the reward of successfully teaching new topics.</p>
+            </div>
+        </div>
+        </div>
+        <div class="footer"> 
+            <a class="footerlink" href="https://www.utsc.utoronto.ca/cms/computer-science">Faculty of Computer Science</a>
+            <footer>This website is created in a collbarative effort by Joseph Chang, Haochen Li, and Shaun Danny.</footer> 
+        </div>   
     </div>
   </body>
 </html>
