--- a/src/lecturenotes.html
+++ b/src/lecturenotes.html
@@ -36,7 +36,7 @@
         <div class="container2">
             <h3 class="homeheader">CSCB20 Course Lecture Notes</h3>
             <p class="hometext">Here are the Lecture Notes attached as a PDF. Please read before coming to class.</p>
-            <a class="lecturenotes" src="Lecture Notes.pdf" alt="Lecture Notes"</a>
+            <a class="lecturenotes" src="Lecture Notes.pdf" alt="Lecture Notes"></a>
             <iframe src="Lecture Notes.pdf" width="100%" height="800px"></iframe>
     </div>
 </div>
