--- a/src/news.html
+++ b/src/news.html
@@ -30,7 +30,19 @@
         </div>
     </div>
     <div class="margin">
-    <h1 class="header">News</h1>
+        <div class="minheight">
+        <h1 class="header">News</h1>
+        <div class="grid-home">
+            <div class="intro">
+                <h3 class="homeheader">Jan. 2</h3>
+                <p class="hometext">Welcome to CSCB20. Please note that tutorials will begin in week 2.</p>
+            </div>
+        </div>
+        </div>
+        <div class="footer"> 
+            <a class="footerlink" href="https://www.utsc.utoronto.ca/cms/computer-science">Faculty of Computer Science</a>
+            <footer>This website is created in a collbarative effort by Joseph Chang, Haochen Li, and Shaun Danny.</footer> 
+        </div>   
     </div>
   </body>
 </html>
