--- a/src/resources.html
+++ b/src/resources.html
@@ -45,8 +45,8 @@
                 <h4 class="homeheader2">Logging into Mathlab.</h4>
                 <p class="hometext">1. Mac OS comes with the application "terminal". Simple click on it to run. Login to mathlab by typing</p>
                 <p class="hometext indent"><i>ssh utorid@mathlab.utsc.utoronto.ca.</i> Enter your password.</p>
-                <p class="hometext">2. Windows - you will need a SSH client. PuTTY is a good free one. You can download and install here:<a href="https://www.putty.org/" target="_blank">Putty</a></p>
-                <p class="hometext indent"><i>ssh utorid@mathlab.utsc.utoronto.ca.</i> Enter your password.</p>
+                <p class="hometext">2. Windows - you will need a SSH client. PuTTY is a good free one. You can download and install here:<a href="https://www.putty.org/" target="_blank">Putty</a> Use the same command as above to login to mathlab:</p>
+                <p class="hometext indent"><i>ssh utorid@mathlab.utsc.utoronto.ca.</i></p>
             </div>
         </div>
         <div class="footer"> 
