--- a/src/anonfeedback.html
+++ b/src/anonfeedback.html
@@ -33,7 +33,7 @@
         <div class="minheight">
         <h1 class="header">Anon Feedback</h1>
         <div class="grid-home">
-            <div class="intro">
+            <div class="container">
             <p class="hometext">You can post your feedback to this course anonymously here. Please feel free to share your thoughts on this course.</p>
             <form method="post">
             <textarea name="feedback" placeholder="Enter feedback here..." required></textarea><br>
