--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
       <h1 class="header">CSCB20 - Introduction to Databases and Web Applications</h1>
       <div class="grid-home">
         <h2 class="welcome">Welcome!</h2>
-        <div class="intro">
+        <div class="container">
           <h3 class="homeheader">Course Description</h3>
           <p class="hometext">
             A practical introduction to databases and Web app development. Databases: terminology and applications; creating, querying and updating databases; the entity-relationship model for database design. Web documents and applications: static and interactive documents; Web servers and dynamic server-generated content; Web application development and interface with databases.
@@ -42,7 +42,7 @@
           <p class="hometext">Exclusion: This course may not be taken after - or concurrently with - any C- or D-level CSC course.</p>
           <a class="homelink" href="syllabus.pdf" target="_blank">Syllabus</a>
         </div>
-        <div class="intro">
+        <div class="container">
           <h3 class="homeheader">Instructors</h3>
           <p class="hometext">Dr. Anna Bretscher</p>
           <div class="infogrid">
