--- a/src/lecturenotes.html
+++ b/src/lecturenotes.html
@@ -33,7 +33,7 @@
     <div class="minheight">
     <h1 class="header">Lecture Notes</h1>
     <div class="grid-home">
-        <div class="container2">
+        <div class="container">
             <h3 class="homeheader">CSCB20 Course Lecture Notes</h3>
             <p class="hometext">Here are the Lecture Notes attached as a PDF. Please read before coming to class.</p>
             <a class="lecturenotes" src="Lecture Notes.pdf" alt="Lecture Notes"></a>
