--- a/src/news.html
+++ b/src/news.html
@@ -33,7 +33,7 @@
         <div class="minheight">
         <h1 class="header">News</h1>
         <div class="grid-home">
-            <div class="intro">
+            <div class="container">
                 <h3 class="homeheader">Jan. 2</h3>
                 <p class="hometext">Welcome to CSCB20. Please note that tutorials will begin in week 2.</p>
             </div>
