--- a/src/syllabus.html
+++ b/src/syllabus.html
@@ -33,7 +33,7 @@
     <div class="minheight">
     <h1 class="header">Syllabus</h1>
     <div class="grid-home">
-        <div class="intro">
+        <div class="container">
             <h3 class="homeheader">CSCB20 Course Syllabus</h3>
             <p class="hometext">Here is the Syllabus attached as a PDF. Please read the entire Syllabus.</p>
             <a class="homelink" href="syllabus.pdf" target="_blank">Syllabus</a>
