--- a/src/tests.html
+++ b/src/tests.html
@@ -32,7 +32,7 @@
     <div class="margin">
         <h1 class="header">Tests</h1>
         <div class="grid-home">
-            <div class="container2">
+            <div class="container">
                 <h3 class="homeheader">Midterm</h3>
                 <p class="hometext">There will be one midterm. The midterm will be 75min in length. You should go to either HW215 or HW216 depending on your last name as shown here.</p>
                 <img class="image" src="https://www.utsc.utoronto.ca/~bretscher/b20/tests/B20_rooms.jpg" alt="tests">
