--- a/src/assignments.html
+++ b/src/assignments.html
@@ -32,39 +32,41 @@
     <div class="margin">
     <h1 class="header">Assignments</h1>
         <div class="grid-home">
-            <div class="container2">
+            <div class="container">
                 <h3 class="homeheader">Overview</h3>
                 <p class="hometext">Here are the assignment and exercise topics, weights, and due dates. I will be posting the exercise and assignment handouts here. All exercises and assignments will be submitted on <a href="https://markus2.utsc.utoronto.ca/" target="_blank">Markus</a>.</p>
-                <h3 class="homeheader">Assignments</h3>
             </div>
         </div>
-    <div class="grid-assignment">
-        <p class="labitem"></p>
-        <p class="labitem">Exercise</p>
+        <div class="container">
+            <h3 class="homeheader">Assignments</h3>
+        <div class="grid-assignment">
+            <p class="labitem"></p>
+            <p class="labitem">Exercise</p>
             <p class="labitem">Topic (tentative)</p>
             <p class="labitem">Weight</p>
             <p class="labitem">Due Date</p>
             <p class="labitem">Solution</p>
             <p class="labitem">1</p>
-            <a class="lablink" href="https://www.utsc.utoronto.ca/~bretscher/b20/assignments/a1/" target="_blank">Handout</a>
+            <p><a class="lablink" href="https://www.utsc.utoronto.ca/~bretscher/b20/assignments/a1/" target="_blank">Handout</a></p>
             <p class="labitem">Relational Algebra and MySQL</p>
             <p class="labitem">15%</p>
-            <p class="labitem">Part 1. Wednesday Feb. 1, 11.59pm, Submit to <a href="https://markus2.utsc.utoronto.ca/" target="_blank">Markus</a>. UPDATED Part 2 and 3. For 5% bonus Saturday Feb. 11, 11.59pm or Friday Feb. 17, 11.59 Submit to <a href="https://markus2.utsc.utoronto.ca/" target="_blank">Markus</a> You can download a dumpfile for IMDB_SMALL <a href="C:\Users\josep\OneDrive\Desktop\A2\IMDB_SMALL.sql" target="_blank">here</a></p>
-            <a class="lablink" href="Lecture%20Notes.pdf" target="_blank">Solution Part 1</a>
+            <p class="labitem">Part 1. Wednesday Feb. 1, 11.59pm, Submit to <a href="https://markus2.utsc.utoronto.ca/" target="_blank">Markus</a>. UPDATED Part 2 and 3. For 5% bonus Saturday Feb. 11, 11.59pm or Friday Feb. 17, 11.59 Submit to <a href="https://markus2.utsc.utoronto.ca/" target="_blank">Markus</a> You can download a dumpfile for IMDB_SMALL <a href="IMDB_SMALL.sql" target="_blank">here</a></p>
+            <p><a class="lablink" href="Lecture%20Notes.pdf" target="_blank">Solution Part 1</a></p>
             <p class="labitem">2</p>
-            <a class="lablink" href="Lecture%20Notes.pdf" target="_blank">Handout a2</a>
+            <p><a class="lablink" href="Lecture%20Notes.pdf" target="_blank">Handout a2</a></p>
             <p class="labitem">HTML, CSS, PHP</p>
             <p class="labitem">15%</p>
             <p class="labitem">Part 1: Worth 50% Friday March. 10, 11.59pm, Submit to <a href="https://markus2.utsc.utoronto.ca/" target="_blank">Markus</a>. Part 2: Worth 50% Friday March. 19, 11.59pm, Submit to <a href="https://markus2.utsc.utoronto.ca/" target="_blank">Markus</a>.</p>
             <p class="labitem"></p>
             <p class="labitem">3</p>
-            <a class="lablink" href="https://www.utsc.utoronto.ca/~bretscher/b20/assignments/a3/a3_marking_scheme.txt" target="_blank">New Marking Scheme for Handout</a>
+            <p><a class="lablink" href="https://www.utsc.utoronto.ca/~bretscher/b20/assignments/a3/a3_marking_scheme.txt" target="_blank">New Marking Scheme for Handout</a></p>
             <p class="labitem">Web Application and Database</p>
             <p class="labitem">15%</p>
             <p class="labitem">Friday March 31, 11.59pm</p>
+        </div>
     </div>
     <div class="grid-home">
-        <div class="container2">
+        <div class="container">
             <h3 class="homeheader">FAQ - Assignment 1</h3>
             <p class="hometext">Q. If the mysql portion asks for a director or actor without specifying which attributes, what should I return?</p>
             <p class="hometext">A. Return the first name, last name.</p>
