--- a/src/labs.html
+++ b/src/labs.html
@@ -31,48 +31,49 @@
     </div>
     <div class="margin">
     <h1 class="header">Labs</h1>
-    <div class="container3">
+    <div class="container">
         <div class="grid-home">
             <div class="container2">
                 <h3 class="homeheader">CSCB20 Tutorial Sections</h3>
                 <p class="hometext">Please go the tutorial section that you signed up for on ROSI.</p>
-                <h3 class="homeheader">Tutorial Exercises</h3>
-                <p class="hometext">This section contains the tutorial exercises.</p>
-                <p class="hometext">Tutorials are held every week. The first tutorial week is week 2. Please make use of this valuable resource!</p>
+        
             </div>
         </div>
     </div>
-    <div class="container2">
+    <div class="container">
+        <h3 class="homeheader">Tutorial Exercises</h3>
+                <p class="hometext">This section contains the tutorial exercises.</p>
+                <p class="hometext">Tutorials are held every week. The first tutorial week is week 2. Please make use of this valuable resource!</p>
         <div class="grid-lab">
             <p class="labitem">Week</p>
             <p class="labitem">Lab</p>
             <p class="labitem">Solutions</p>
             <p class="labitem">2</p>
-            <a class="lablink" href="https://www.utsc.utoronto.ca/~bretscher/b20/tutorials/t1/" target="_blank">Python, Command line</a>
+            <p><a class="lablink" href="https://www.utsc.utoronto.ca/~bretscher/b20/tutorials/t1/" target="_blank">Python, Command line</a></p>
             <p class="labitem">None</p>
             <p class="labitem">3</p>
-            <a class="lablink" href="Lecture%20Notes.pdf" target="_blank">Handout</a>
+            <p><a class="lablink" href="Lecture%20Notes.pdf" target="_blank">Handout</a></p>
             <p class="labitem"></p>
             <p class="labitem">4</p>
-            <a class="lablink" href="https://www.utsc.utoronto.ca/~bretscher/b20/tutorials/t3/index.html" target="_blank">Handout university.sql</a>
-            <a class="lablink" href="https://www.utsc.utoronto.ca/~bretscher/b20/tutorials/t3/query_solns.html" target="_blank">query_solns</a>
+            <p><a class="lablink" href="https://www.utsc.utoronto.ca/~bretscher/b20/tutorials/t3/index.html" target="_blank">Handout university.sql</a></p>
+            <p><a class="lablink" href="https://www.utsc.utoronto.ca/~bretscher/b20/tutorials/t3/query_solns.html" target="_blank">query_solns</a></p>
             <p class="labitem">5</p>
-            <a class="lablink" href="Lecture%20Notes.pdf" target="_blank">Handout</a>
-            <a class="lablink" href="Lecture%20Notes.pdf" target="_blank">Solns</a>
+            <p><a class="lablink" href="Lecture%20Notes.pdf" target="_blank">Handout</a></p>
+            <p><a class="lablink" href="Lecture%20Notes.pdf" target="_blank">Solns</a></p>
             <p class="labitem">6</p>
-            <a class="lablink" href="Lecture%20Notes.pdf" target="_blank">Handout</a>
-            <a class="lablink" href="Lecture%20Notes.pdf" target="_blank">Solns</a>
+            <p><a class="lablink" href="Lecture%20Notes.pdf" target="_blank">Handout</a></p>
+            <p><a class="lablink" href="Lecture%20Notes.pdf" target="_blank">Solns</a></p>
             <p class="labitem">7</p>
-            <a class="lablink" href="Lecture%20Notes.pdf" target="_blank">Handout</a>
+            <p><a class="lablink" href="Lecture%20Notes.pdf" target="_blank">Handout</a></p>
             <p class="labitem"></p>
             <p class="labitem">8</p>
-            <a class="lablink" href="Lecture%20Notes.pdf" target="_blank">Handout</a>
+            <p><a class="lablink" href="Lecture%20Notes.pdf" target="_blank">Handout</a></p>
             <p class="labitem"></p>
             <p class="labitem">9</p>
-            <a class="lablink" href="Lecture%20Notes.pdf" target="_blank">Handout</a>
+            <p><a class="lablink" href="Lecture%20Notes.pdf" target="_blank">Handout</a></p>
             <p class="labitem"></p>
             <p class="labitem">10</p>
-            <a class="lablink" href="https://www.w3schools.com/jquery/jquery_syntax.asp" target="_blank">W3 Tutorial</a>
+            <p><a class="lablink" href="https://www.w3schools.com/jquery/jquery_syntax.asp" target="_blank">W3 Tutorial</a></p>
             <p class="labitem">Work through the tutorial for jQuery up until jQuery Remove.</p>
         </div>
     </div>
