--- a/src/markus.html
+++ b/src/markus.html
@@ -33,9 +33,11 @@
     <div class="minheight">
     <h1 class="header">Markus</h1>
     <div class="grid-home">
+        <div class="container">
         <h3 class="homeheader">CSCB20 Markus</h3>
         <p class="hometext">Here is the link to Markus.</p>
         <a class="homelink" href="https://markus2.utsc.utoronto.ca/" target="_blank">Markus</a>
+    </div>
     </div>
     </div>
     <div class="footer"> 
