--- a/src/resources.html
+++ b/src/resources.html
@@ -33,6 +33,7 @@
         <div class="minheight">
         <h1 class="header">Resources</h1>
         <div class="grid-home">
+            <div class="container">
                 <h3 class="homeheader">Online Resources</h3>
                 <h4 class="homeheader2"> <a href="file:///C:/Users/josep/OneDrive/Desktop/A2/index.html" target="_blank">Course Website</a></h4>
                 <p class="hometext">Course information, lecture notes, tutorial material, important announcements, etc. will be posted on the course website. It is your responsibility to visit it frequently.</p>
@@ -41,6 +42,8 @@
                 <p class="hometext">Questions regarding the course material, assignments, midterm, etc. should be posed on the bulletin board. Questions about the assignment which you feel you cannot formulate without revealing your solution (should be very rare!), as well as questions and concerns regarding your personal matters should be directed to the instructor.</p>
                 <h4 class="homeheader2"><a href="file:///C:/Users/josep/OneDrive/Desktop/A2/index.html" target="_blank">Discussion board</a></h4>
                 <p class="hometext">You are encouraged to use the bulletin board to discuss the course material, pose questions on the assignments, etc. The bulletin board will be monitored by the instructor and by your TAs. Please, be very careful not to reveal (parts of) your solution on the bulletin board.</p>
+            </div>
+            <div class="container">
                 <h3 class="homeheader">Software and documentation</h3>
                 <h4 class="homeheader2">Logging into Mathlab.</h4>
                 <p class="hometext">1. Mac OS comes with the application "terminal". Simple click on it to run. Login to mathlab by typing</p>
@@ -48,6 +51,7 @@
                 <p class="hometext">2. Windows - you will need a SSH client. PuTTY is a good free one. You can download and install here:<a href="https://www.putty.org/" target="_blank">Putty</a> Use the same command as above to login to mathlab:</p>
                 <p class="hometext indent"><i>ssh utorid@mathlab.utsc.utoronto.ca.</i></p>
             </div>
+        </div>
         </div>
         <div class="footer"> 
             <a class="footerlink" href="https://www.utsc.utoronto.ca/cms/computer-science">Faculty of Computer Science</a>
