--- a/src/courseteam.html
+++ b/src/courseteam.html
@@ -45,6 +45,7 @@
             </div>
             <div class="container">
                 <h3 class="homeheader">Course TAs</h3>
+                <p class="hometext">Here are the TAs of this course. They will be leading the tutorials.</p>
                 <h4 class="homeheader2">Naghmeh Safaie</h4>
                 <h4 class="homeheader2">Orhan Cangurel</h4>
                 <h4 class="homeheader2">Kevin Zhang</h4>
