--- a/src/resources.html
+++ b/src/resources.html
@@ -39,7 +39,7 @@
                 <h4 class="homeheader2"> Beginner Tutorial for <a href="https://code.tutsplus.com/sql-for-beginners--net-8200a" target="_blank">My SQL</a></h4>
                 <h4 class="homeheader2"> Email communication</h4>
                 <p class="hometext">Questions regarding the course material, assignments, midterm, etc. should be posed on the bulletin board. Questions about the assignment which you feel you cannot formulate without revealing your solution (should be very rare!), as well as questions and concerns regarding your personal matters should be directed to the instructor.</p>
-                <h4 class="homeheader2"><a href="file:///C:/Users/josep/OneDrive/Desktop/A2/index.html" target="_blank">Discussion board</a></h4>
+                <h4 class="homeheader2"><a href="https://piazza.com/class/m5fmz9kzjo83yk" target="_blank">Discussion board</a></h4>
                 <p class="hometext">You are encouraged to use the bulletin board to discuss the course material, pose questions on the assignments, etc. The bulletin board will be monitored by the instructor and by your TAs. Please, be very careful not to reveal (parts of) your solution on the bulletin board.</p>
             </div>
             <div class="container">
