--- a/src/markus.html
+++ b/src/markus.html
@@ -36,6 +36,7 @@
         <h3 class="homeheader">CSCB20 Markus</h3>
         <p class="hometext">Here is the link to Markus.</p>
         <a class="homelink" href="https://markus2.utsc.utoronto.ca/" target="_blank">Markus</a>
+        <embed class="markus" src="https://markus2.utsc.utoronto.ca/" width="800" height="800">
         </div>
     </div>
     </div>
