--- a/src/piazza.html
+++ b/src/piazza.html
@@ -31,7 +31,7 @@
     <div class="margin">
         <div class="minheight">
             <h1 class="header">Piazza</h1>
-            <embed class="piazza" src="https://piazza.com/class/m5fmz9kzjo83yk" width="800" height="800">
+            <embed class="piazza" src="https://piazza.com/class/m5fmz9kzjo83yk">
         </div>
         <div class="footer"> 
             <a class="footerlink" href="https://www.utsc.utoronto.ca/cms/computer-science">Faculty of Computer Science</a>
